--- a/static/styles.css
+++ b/static/styles.css
@@ -1,11 +1,37 @@
+:root {
+  --font: 'Prompt',
+    sans-serif;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
 
 body {
   margin: 0;
-  font-family: 'Prompt', sans-serif;
+  padding: 0;
+  font-family: var(--font);
   background-color: black;
   color: white;
   overflow: hidden;
+  /* Font smothing for chrome and firefox (helps elements with stairstepping) */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* Remove all button default styling */
+button,
+a {
+  all: unset;
+  display: inline-block;
+  cursor: pointer;
+}
+
+/* Font smothing for chrome and firefox (helps elements with stairstepping) */
+button,
+input,
+select,
+textarea {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 canvas {
@@ -13,12 +39,14 @@ canvas {
 }
 
 #header {
-  text-align: center;
+  text-align: left;
   font-size: 2em;
   font-weight: 300;
   font-style: italic;
-  margin: 20px 0;
   color: white;
+  margin: 0;
+  padding: 20px 0;
+  padding-left: 20px;
 }
 
 #controls {
@@ -29,12 +57,132 @@ canvas {
 }
 
 #playButton {
-  font-family: 'Prompt', sans-serif;
   font-size: 1em;
   padding: 10px 20px;
   background-color: #0f55e3;
   color: white;
-  border: none;
   border-radius: 5px;
-  cursor: pointer;
 }
+
+/* Dropdown menu */
+#menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  align-items: flex-end;
+  margin-top: 20px;
+  margin-right: 40px;
+}
+
+#menuButton {
+  height: 40px;
+  background-color: black;
+  color: white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  padding: 0px 5px;
+  position: relative;
+  overflow: hidden;
+}
+
+#menuButton::before {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 97%;
+  height: 100%;
+  z-index: 0;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  transition: top 0.3s ease;
+}
+
+#menuButton:hover::before {
+  top: 0;
+}
+
+#menuButton span {
+  position: relative;
+  height: 40px;
+  z-index: 1;
+}
+
+#menuButton:hover span {
+  color: white;
+}
+
+#menuItems {
+  /* margin-top: 25px; */
+  margin-right: -10px;
+  text-align: right;
+  padding: 0 10px;
+  padding-bottom: 10px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.menuItem {
+  height: 40px;
+}
+
+
+#sceneToggles,
+#sequenceToggles {
+  color: rgba(255, 255, 255, 0.5);
+  margin-bottom: 10px;
+  /* Align items to the right */
+}
+
+.toggleButton {
+  height: 40px;
+  min-width: 40px;
+  text-align: right;
+}
+
+@keyframes enter {
+  from {
+    transform: translateY(-20%);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes exit {
+  from {
+    transform: translateY(0);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    opacity: 1;
+  }
+
+  to {
+    transform: translateY(-20%);
+    display: none;
+    flex-direction: column;
+    align-items: flex-end;
+    opacity: 0;
+  }
+}
+
+.dropdownContent {
+  display: none;
+}
+
+.dropdownContent.show {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  animation: enter 0.5s ease forwards;
+}
+
+.dropdownContent.hide {
+  animation: exit 0.2s ease forwards;
+}
+
