Added function to try and get the menu to turn on and off effects. Works turning on but not off

--- a/static/styles.css
+++ b/static/styles.css
@@ -130,12 +130,12 @@ canvas {
 
 #sceneToggles,
 #sequenceToggles {
-  color: rgba(255, 255, 255, 0.5);
   margin-bottom: 10px;
   /* Align items to the right */
 }
 
 .toggleButton {
+  color: grey;
   height: 40px;
   min-width: 40px;
   text-align: right;
